* CHANGES IN dplR VERSION 1.7.3

File: nm046
----------------

- Added new data file, nm046 is a rwl file that has a dirty dog in it (one where spline fits are negative in detrending).

File: ffcsaps
----------------

- Added `ties = "ordered"` to approx() to avoid warning thrown by regularize.values

File: caps
----------------

- Added new function caps() for Cook and Peters Spline. This is a function to calculate the classic ARSTAN spline. The work is done in Fortran and involved a C wrapper for the Fortran code. As a result the new files are caps.R, caps.Rd for the main files and the help function. But there are new Fortran and C files (caps.f95, caps.c) and changes to init.c and registered.h. Oh and NAMESPACE too. Note that this function is 1000s of times faster than ffcsaps.

File: ads
----------------

- Added new function ads(). This is a function to calculate age-dependent splines that came via Ed Cook. The work is done in Fortran and involved a C wrapper for the Fortran code. As a result the new files are ads.R, ads.Rd for the main files and the help function. But there are new Fortran and C files (adsf.f95, adsc.c) and changes to init.c and registered.h. Oh and NAMESPACE too.

File: bai.out, bai.in
----------------

- Added check to make sure `d2pith` and `diam` are data.frames and not, say, tibbles

File: ca533.Rd, cana157.Rd, co021.Rd, wa082.Rd
----------------

- Updated access dates and changed ftp to https per email from BDR on April 20 2021

* CHANGES IN dplR VERSION 1.7.2


File: glk.R sgc.R
----------------

- Revising glk for speed and adding sgc as a new function from Ronald Visser

File: chron.stabilized.R
----------------

- Adding variance stabilization from Stefan Kleese see https://github.com/AndyBunn/dplR/issues/3

File: time.rwl.R
----------------

- Adding `time<-` as a method for `time.rwl<-` and `time.crn<-` so that
  times can be set as well as retrieved from rwl and crn. Getting the NAMESPACE,
  and .Rd files right was unpleasant.
