@@ -41,8 +41,10 @@
                      silent = TRUE),
                  "try-error") && req.fe){
         it.rwl <- iterators::iter(rwl, by = "col")
+        # get series name for each iteration in dopar as well
+        it.names <- iterators::iter(names(rwl), by = "col")
         ## a way to get rid of "no visible binding" NOTE in R CMD check
-        rwl.i <- NULL
+        rwl.i <- y.name.i <- NULL
 
         exportFun <- c("names<-", "detrend.series")
         ## Use a dummy loop to suppress possible (non-)warning from
@@ -50,10 +52,13 @@
         foo <- suppressWarnings(foreach::"%dopar%"(foreach::foreach(i=1), {}))
         ## ... but leave actual warnings on for the real loop.
         out <- foreach::"%dopar%"(foreach::foreach(rwl.i=it.rwl,
+                                                   y.name.i=it.names,
                                                    .export=exportFun),
                               {
                                   names(rwl.i) <- rn
-                                  do.call(detrend.series, detrend.args)
+                                  # append the series name to detrend.args
+                                  do.call(detrend.series, 
+                                          c(detrend.args,list(y.name=y.name.i)))
                               })
 
         if (return.info) {
@@ -72,7 +77,11 @@
         }
         detrend.args[1] <- alist(rwl[[i]])
         detrend.args[["verbose"]] <- verbose
+        # how to append detrend.args in the dopar call so that
+        # name gets passed in? Important for detrend.series warnings
+        # about neg values.
         detrend.args <- c(detrend.args, alist(y.name = y.name[i]))
+    
         for (i in seq_len(n.series)) {
             fits <- do.call(detrend.series, detrend.args)
             if (return.info) {
